# path_of_apis

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
path_of_api/poe_scout/: default.py  items.py  leagues.py  main.py  realms.py
path_of_apis/poe_scout/: currencies.py  items.py  realms.py
src/path_of_apis/poe_scout/: api.py  default.py  items.py  leagues.py  uniques.py
tests/: test_poe_scout.py
