[project]
name = "path_of_apis"
version = "0.1.0"
description = "A Path of Exile API wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.1.1",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/path_of_apis"]
